# PdfOCR

./: .dockerignore  Dockerfile  README.md  build-multi.sh  build.sh  compose.yaml  pyproject.toml
ocr_service/: .env.sample  server.py
ocr_service/processor/: surya_processor.py
ocr_service/services/: ocr_service.py
ocr_service/supports/: constants.py  env.py  logger.py  utils.py
